# ginger-DJ

./: .eslintignore  .eslintrc  .gitignore  CHANGELOG.md  Dockerfile  INSTALL  LICENSE  LICENSE.python  MANIFEST.in  README.md  db.sqlite3  docker-compose.yml  manage.py  metadata.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  releaser.toml  rename.py  rename.sh  requirements.txt  run_coverage.sh  services.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: CI.yml  docs.yml  linters.yml  new_contributor_pr.yml  publish.yml  schedule_tests.yml  schedules.yml  selenium.yml  tests.yml
.tx/: config
docs/: Makefile  conf.py  contents.txt  glossary.txt  index.txt  make.bat  spelling_wordlist
docs/_ext/: gingerdjdocs.py  gingerdocs.py
docs/faq/: admin.txt  contributing.txt  general.txt  help.txt  index.txt  install.txt  models.txt  troubleshooting.txt  usage.txt
docs/howto/: auth-remote-user.txt  csrf.txt  custom-file-storage.txt  custom-lookups.txt  custom-management-commands.txt  custom-model-fields.txt  custom-template-backend.txt  custom-template-tags.txt  delete-app.txt  error-reporting.txt  index.txt  initial-data.txt  legacy-databases.txt  logging.txt  outputting-csv.txt  outputting-pdf.txt  overriding-templates.txt  upgrade-version.txt  windows.txt  writing-migrations.txt
docs/internals/: deprecation.txt  git.txt  howto-release-ginger.txt  index.txt  mailing-lists.txt  organization.txt  release-process.txt  security.txt
docs/intro/: contributing.txt  index.txt  install.txt  overview.txt  reusable-apps.txt  tutorial01.txt  tutorial02.txt  tutorial03.txt  tutorial04.txt  tutorial05.txt  tutorial06.txt  tutorial07.txt  tutorial08.txt  whatsnext.txt
docs/man/: ginger-admin.1  gingerdj-admin.1
docs/misc/: api-stability.txt  design-philosophies.txt  distributions.txt  index.txt
docs/ref/: applications.txt  checks.txt  clickjacking.txt  csrf.txt  databases.txt  exceptions.txt  ginger-admin.txt  gingerdj-admin.txt  index.txt  logging.txt  middleware.txt  migration-operations.txt  paginator.txt  request-response.txt  schema-editor.txt  (+9 more)
extras/: README.TXT  ginger_bash_completion  gingerdj_bash_completion
ginger/: __init__.py  __main__.py  shortcuts.py
gingerdj/: __init__.py  __main__.py  shortcuts.py
js_tests/: tests.html
scripts/: manage_translations.py
server/: asgi.py  settings.py  urls.py  wsgi.py
src/: admin.py  apps.py  models.py  tests.py  views.py
tests/: README.rst  runtests.py  test_sqlite.py  urls.py
(+4977 files in other folders)
