[metadata]
name = ginger-dj
version = attr: ginger.__version__
url = https://www.ginger.gloportal.dev/
author = Ginger Society
author_email = foundation@ginger.gloportal.dev
description = A high-level Python web framework that encourages rapid development and clean, pragmatic design.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.ginger.gloportal.dev/
    Release notes = https://docs.ginger.gloportal.dev/en/stable/releases/
    Funding = https://www.ginger.gloportal.dev/fundraising/
    Source = https://github.com/ginger/ginger
    Tracker = https://code.ginger.gloportal.dev/

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    asgiref >= 3.7.0
    sqlparse >= 0.3.1
    tzdata; sys_platform == 'win32'

[options.entry_points]
console_scripts =
    ginger-admin = ginger.core.management:execute_from_command_line

[options.extras_require]
argon2 = argon2-cffi >= 19.1.0
bcrypt = bcrypt

[flake8]
exclude = build,.git,.tox,./tests/.env
extend-ignore = E203
max-line-length = 88
per-file-ignores =
    ginger/core/cache/backends/filebased.py:W601
    ginger/core/cache/backends/base.py:W601
    ginger/core/cache/backends/redis.py:W601
    tests/cache/tests.py:W601
